<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/layoutlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/holo_blue_dark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/logo"
            android:layout_width="127dp"
            android:layout_height="113dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/tKategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori"
        android:layout_below="@id/layoutlogo"
        android:layout_marginLeft="@dimen/view_left_margin_1"
        android:layout_marginTop="@dimen/view_top_margin_1"
        android:labelFor="@id/etKategori"
        android:textSize="@dimen/font_size"/>

    <EditText
        android:id="@+id/etKategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutlogo"
        android:layout_alignBaseline="@id/tKategori"
        android:layout_toEndOf="@id/tKategori"
        android:layout_marginStart="@dimen/view_left_margin_1"
        android:ems="9"
        android:textSize="@dimen/font_size"/>

    <Button
    android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutlogo"
        android:layout_alignBaseline="@id/tKategori"
        android:layout_toEndOf="@id/etKategori"
        android:layout_marginTop="@dimen/view_top_margin_1"
        android:textSize="@dimen/font_size"
        android:text="@string/add"/>
    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_left_margin_1"
        android:textSize="@dimen/font_size"
        android:text="@string/refresh"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/refresh"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/view_left_margin_1"
        android:textSize="@dimen/font_size"
        android:id="@+id/categoryList">
    </ListView>
</RelativeLayout>